--- a/ASPCORE_RML_XCast_Store/wwwroot/toro/css/style.css
+++ b/ASPCORE_RML_XCast_Store/wwwroot/toro/css/style.css
@@ -46,7 +46,7 @@
 /*  1. Template default CSS
 /*----------------------------------------*/
 /*-- Google Font --*/
-@import url("https://fonts.googleapis.com/css?family=Alegreya:400,500,700,800,900|Poppins:200,300,400,500,600,700,800,900&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Alegreya:400,500,700,800,900|Montserrat:200,300,400,500,600,700,800,900&display=swap");
 /*-- Common Style --*/
 @media only screen and (min-width: 1200px) {
   .container {
@@ -91,7 +91,7 @@ body {
   font-style: normal;
   font-weight: 400;
   color: #262626;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 h1,
@@ -103,7 +103,7 @@ h6 {
   color: #262626;
   font-weight: 400;
   margin-top: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 p {
@@ -112,7 +112,7 @@ p {
   line-height: 24px;
   color: #777;
   margin-bottom: 15px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 h1 {
@@ -17142,7 +17142,7 @@ body.body-menu-overlay::before {
 }
 
 .subscribe-content-form-wrap .subscribe-content.subscribe-content-hm4 h2 {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-transform: capitalize;
   font-size: 44px;
   margin: -4px 0 32px;
