--- a/ASPCORE_RML_XCast_Store/Views/_ViewImports.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using RMLXCast
 @using RMLXCast.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, PagedList.Core.Mvc
