--- a/ASPCORE_RML_XCast_Store/Views/Shared/_AdminLayout.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/_AdminLayout.cshtml
@@ -297,6 +297,14 @@
                                     <i class="side-menu__icon fe fe-package"></i><span class="side-menu__label">Заказы</span>
                                 </a>
                             </li>
+                            <li class="sub-category">
+                                <h3>Управление категориями товаров</h3>
+                            </li>
+                            <li class="slide">
+                                <a class="side-menu__item has-link" data-bs-toggle="slide" asp-action="Categories" asp-controller="AdminProductCategory">
+                                    <i class="side-menu__icon fe fe-clipboard"></i><span class="side-menu__label">Категории товаров</span>
+                                </a>
+                            </li>
                         </ul>
                         <div class="slide-right" id="slide-right">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="#7b8191"
